fixed visibility hrefs mobile

--- a/css/master.scss
+++ b/css/master.scss
@@ -123,7 +123,7 @@ body {
             flex-direction: column;
             padding: 5%;
             margin-bottom: 5%;
-            
+
             input,
             textarea {
                 background-color: #1f2025;
@@ -133,6 +133,7 @@ body {
                 border-radius: 2px;
                 font-family: Roboto;
             }
+
             form {
                 display: flex;
                 flex-direction: column;
@@ -355,9 +356,7 @@ body {
                 filter: blur(3px);
                 -webkit-filter: blur(3px);
             }
-        }
 
-        .container:hover {
             .overlay {
                 opacity: 1;
             }
@@ -370,7 +369,7 @@ body {
             }
 
             form {
-                > *{
+                >* {
                     width: 100%;
                 }
             }
